feature: Korean translation added, issue 150
git-svn-id: http://qwit.googlecode.com/svn/trunk@345 067a171b-6953-0410-b330-3d32600bf046

--- a/qwit.qrc
+++ b/qwit.qrc
@@ -32,6 +32,7 @@
         <file>translations/qwit_fi_FI.qm</file>
         <file>translations/qwit_pl_PL.qm</file>
         <file>translations/qwit_ro_RO.qm</file>
+        <file>translations/qwit_ko_KR.qm</file>
         <file>images/uiopme.png</file>
         <file>images/unu.png</file>
         <file>images/murlkz.png</file>
@@ -50,6 +51,7 @@
         <file>images/countries/tr.png</file>
         <file>images/countries/us.png</file>
         <file>images/countries/ro.png</file>
+        <file>images/countries/kr.png</file>
         <file>images/google.png</file>
         <file>images/bitly.png</file>
         <file>images/budurlcom.png</file>
