feature: integrated 3cm.kz url shortener
git-svn-id: http://qwit.googlecode.com/svn/trunk@353 067a171b-6953-0410-b330-3d32600bf046

--- a/qwit.qrc
+++ b/qwit.qrc
@@ -58,5 +58,6 @@
         <file>images/bitly.png</file>
         <file>images/budurlcom.png</file>
         <file>images/aitu.png</file>
+        <file>images/3cmkz.png</file>
     </qresource>
 </RCC>
